<resources>
    <string name="app_name">stellog</string>
    <string name="page_indicator_format">%1$d / %2$d</string>
    <string name="habit_target_summary">此日计 %1$d %2$s，已累计 %3$d %4$s</string>
    <string name="today_date_format">今天 | %1$s</string>
    <string name="create_habit_title">创建活动</string>
    <string name="habit_name_hint">记录具体的目标，愿望，习惯</string>
    <string name="habit_unit_hint">单位，例如 分钟、km、个</string>
    <string name="habit_name_label">活动名称</string>
    <string name="habit_unit_label">计量单位</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="record_detail_title">记录详细</string>
    <string name="record_detail_subtitle">%1$s，单位：%2$s</string>
    <string name="record_value_label">完成数量</string>
    <string name="record_value_hint">请输入今天完成的数量</string>
    <string name="habit_filter_title">选择活动</string>
    <string name="confirm">确定</string>
</resources>
